prepare for Reaper Sampe kotlin
Signed-off-by: liujia2 <liujia2@qiku.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,12 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -33,4 +39,6 @@ dependencies {
     compile "com.android.support:appcompat-v7:$support_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.anko:anko-common:$anko_version"
+    //    compile (name: 'reaper', ext: 'aar', version: '1.0.0')
+    implementation files('libs/reaper.jar')
 }
